[package]
name = "vault"
version = "0.1.2"
authors = ["anonymous"]
edition = "2021"

[dependencies]

ink_prelude = { version = "3", default-features = false }
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

pink-extension = { version = "0.1", default-features = false }
pink-utils = { version = "0.1", default-features = false }

base64 = { version = "0.13.0", default-features = false, features =["alloc"] }
thiserror = "1.0.35"
openbrush = { path = "vendor/openbrush-contracts", version = "~2.1.0", default-features = false }

serde = { version = "1.0.137", default-features = false, features = ["derive", "alloc"]}
serde-json-core = { version = "0.4.0" }

pink-crypto = { path = "pink-libs/pink-crypto" }
pink-traits = { path = "pink-libs/pink-traits" }

[dev-dependencies]
pink-extension-runtime = "0.1.3"
serde_json = { version = "1.0.0" }

[lib]
name = "vault"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "serde-json-core/std",
]

xcm = []

ink-as-dependency = []

mockable = [
    "openbrush/mockable",
]