[package]
name = "pink-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
ink_primitives = { version = "3", default-features = false }
ink_prelude = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

ring = { version = "0.16.20", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "2.0", default-features = false }
schnorrkel = { version = "0.9.1", default-features = false, features = ["preaudit_deprecated", "u64_backend"] }
aead = { version = "0.4.3", default-features = false, optional = true }
typenum = { version = "1.14.0", default-features = false, optional = true }
aead-io = { version = "0.1.2", optional = true }
aes-gcm = { version = "0.9.4" }

[dev-dependencies]
rand = "0.7.3"
hex = "0.4"
schnorrkel = { version = "0.9.1", default-features = false, features = ["preaudit_deprecated", "u64_backend", "getrandom"] }