[package]
name = "pink-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
ink_prelude = { version = "3", default-features = false }
ink_env = { version = "3", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
